JSR 252 - State management implementation complete